# aws-sdk-python-signers

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  lint.yml
examples/: README.md  aiohttp_signer.py  curl_signer.py  requests_signer.py
src/aws_sdk_signers/: __init__.py  _http.py  _identity.py  _io.py  _version.py  exceptions.py  signers.py
src/aws_sdk_signers/interfaces/: http.py  identity.py  io.py
tests/unit/: test_fields.py  test_identity.py  test_signers.py
tests/unit/auth/: test_sigv4.py
