[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-sdk-signers"
requires-python = ">=3.12"
authors = [
  {name = "Amazon Web Services"},
]
description = "Standalone HTTP Request Signers for Amazon Web Services"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["AWS", "Signing", "SigV4", "HTTP"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python"
]
dynamic = ["version"]

[tool.hatch.build.targets.wheel]
packages = ["src/aws_sdk_signers"]

[tool.hatch.version]
path = "src/aws_sdk_signers/_version.py"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
