[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-sdk-signers"
requires-python = ">=3.12"
authors = [
  {name = "Amazon Web Services"},
]
description = "Standalone HTTP Request Signers for Amazon Web Services"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["AWS", "Signing", "SigV4", "HTTP"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "freezegun",
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aws_sdk_signers"]

[tool.hatch.version]
path = "src/aws_sdk_signers/_version.py"

[tool.ruff]
line-length = 88
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
ignore = []

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-W error"
